# VMEC9011

./: .gitignore  CMakeLists.txt  Makefile  README.md  alias.f  bcovar.f  block_data.f  bss.f  code.f  common_blocks.f  convert.f  crlib64.f  eqfor.f  eqsolve.f  evolve.f  extrap.f  fixaray.f  forces.f  funct3d.f  getfsq.f  getiota.f  indata  interp.f  jacobian.f  lamcal.f  name1  name2  name3  name4  output.f  precondn.f  pressure.f  printout.f  profil3d.f  readin.f  residue.f  restart.f  scalfor.f  solovev  spectrum.f  (+6 more)
src/: CMakeLists.txt  alias.f90  bcovar.f  bcovar.f90  block_data.f  bss.f90  convert.f  convert.f90  crlib64.f  eqfor.f  eqfor.f90  eqsolve.f  eqsolve.f90  evolve.f  evolve.f90  extrap.f  extrap.f90  fixaray.f  fixaray.f90  forces.f  forces.f90  funct3d.f  funct3d.f90  getfsq.f90  getiota.f90  interp.f90  jacobian.f90  lamcal.f90  name0  name0.f90  name1  name1.f90  name2.f90  name3.f90  name4.f90  output.f90  precondn.f  precondn.f90  pressure.f  pressure.f90  (+28 more)
test/: hnr22_kis  hnr22_kis_10iter  plot_pcurr.plt
